# CommandSelector

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  README.md  backstop.json  build.ps1  package.json  sync-version.js
.claude/: settings.local.json
.trae/documents/: ops-ui-responsive-scaling-page-design.md  ops-ui-responsive-scaling-prd.md  ops-ui-responsive-scaling-technical-architecture.md
.trae/rules/: uiue.md
.trae/skills/cmdslt/: SKILL.md
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/public/: library.json
apps/admin/src/: App.vue  main.ts  router.ts
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/icons/: icon.icns
apps/admin/src-tauri/src/: ai_config.rs  app_paths.rs  clipboard.rs  debug.rs  file_ops.rs  global_hotkey.rs  lib.rs  log_utils.rs  main.rs  search.rs  shell_open.rs
apps/admin/src/assets/fonts/: fonts.css
apps/admin/src/components/: CodeMirrorEditor.vue  ConfirmDialog.vue  CreateScriptDialog.vue  MessageContainer.vue  MonacoEditor.vue  ScriptEditorActions.vue  ScriptEditorDialog.vue  ScriptManageDialog.vue  ScriptManageToolbar.vue  ScriptMetadataPanel.vue
apps/admin/src/composables/: useMessage.ts  useScriptFilters.ts
apps/admin/src/pages/: CommandBrowserPage.vue  CommandEditorPage.vue  PublishPage.vue  SettingsPage.vue
apps/admin/src/store/: library.ts  scripts.ts
apps/admin/src/styles/: editor.css
apps/admin/src/utils/: logger.ts
apps与其他/src/components/: MonacoEditor.vue
docs/: CODE_STANDARDS.md  GLOBAL_HOTKEY.md  LOGGING.md
scripts/: ensure-port-free.mjs
tasks/: 项目需求.md
tests/: responsive-layout.test.mjs
