[package]
name = "commandselector"
version = "1.1.0"
description = "CommandSelector 是一款高效的运维指令工具，帮助开发者快速生成、管理和复制常用命令。基于 Tauri 框架构建，支持 Windows平台。"
authors = ["witer330"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "commandselector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
encoding_rs = "0.8"
dirs = "6"
log = "0.4"
tauri-plugin-log = "2"
rust-pinyin = "0.1"

